refactor: Update app branding and remove irrelevant sections
The application name has been changed from "Origo" to "SunQuest". This commit also updates the app description to align with the new branding and removes outdated or irrelevant sections from the UI (e.g., Origami Marketplace, localization features) to streamline the user experience and focus on the core value proposition.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Origo | Track the Sun, Collect the Light</title>
+    <title>SunQuest | Go Outside and Grow Your Assets</title>
     <!-- Tailwind CSS CDN for rapid styling -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,9 +22,6 @@
         /* Custom Utility Classes */
         .brand-glow {
             box-shadow: 0 0 80px 20px rgba(139, 92, 246, 0.15);
-        }
-        .crane-gradient {
-            background: linear-gradient(135deg, #2D1B4E 0%, #1a0f2e 100%);
         }
         /* Smooth scrolling for navigation */
         html {
@@ -46,12 +43,6 @@
 </head>
 <body>
     <div id="root"></div>
-    
-    <!-- 
-      MAIN ENTRY POINT: 
-      The script below tells the browser (and Vite) where the React application starts. 
-      Vite will transform this .tsx file into optimized JavaScript during the build.
-    -->
     <script type="module" src="/index.tsx"></script>
 </body>
 </html>
